# pdf2icd

./: Dockerfile  PROBLEM_STATEMENT.md  README.md  pyproject.toml  setup.cfg
pdf2icd/: __init__.py  disease_matcher.py  disease_ner.py  logs.py  ocr.py  poppler.py  prepare_assets.py  utils.py  workflow.py
tests/: __init__.py  test_disease_matcher.py  test_disease_ner.py  test_ocr.py  test_poppler.py  test_utils.py  test_workflow.py
tests/data/output/: all_text.txt  digital.txt  ocr.txt  ocr_page2.txt
